--- a/meteor-taskwarrior.html
+++ b/meteor-taskwarrior.html
@@ -3,11 +3,10 @@
 </head>
 
 <body>
-  <div id="loginButtons">
-    {{loginButtons align="right"}}
-  </div>
-
-  <div id="lendlib">
+    <div id="lendlib">
+    <div id="loginButtons">
+      {{loginButtons align="right"}}
+    </div>
     <div id="categories-container">
       {{> categories}}
     </div>
@@ -48,12 +47,12 @@
 </template>
 
 <template name="list">
-  <ul id="lending_list">
+  <ul id="task_list">
     {{#each tasks}}
-      <li class="lending_item alert">
+      <li class="task_item alert">
         <button type="button" class="close delete_item" id="{{_id}}">x</button>
 
-        {{description}}
+       <p>{{description}}</p>
     {{#if process}}
       <button type="button" style="float:right;" class="processing-button">process</button>
     {{/if}}
