--- a/client/meteor-taskwarrior.html
+++ b/client/meteor-taskwarrior.html
@@ -12,6 +12,7 @@
     </div>
     <div id="list">
       {{> list}}
+      {{> organize}}
     </div>
     <div id="sync">
       {{> sync}}
@@ -36,16 +37,22 @@
     {{else}}
   <div class="category btn btn-inverse" id="btnNewCat">+</div>
   {{/if}}
+
+<div class="category btn {{process_status}}" id="process">Process</div>
+<div class="category btn {{organize_status}}" id="organize">Organize</div>
+<div class="category btn {{review_status}}" id="review">Review</div>
+<div class="category btn {{do_status}}" id="do">Do</div>
+
     {{#each lists}}
     <div class="category btn {{list_status}}" id="{{_id}}">
       {{name}}
     </div>
     {{/each}}
   </div>
-
 </template>
 
 <template name="list">
+{{#if is_processing}}
 {{> processingdialog}}
   <ul id="task_list">
     {{#each tasks}}
@@ -71,7 +78,32 @@
       </li>
     {{/if}}
   </ul>
+{{/if}}
 </template>
+
+<template name="organize">
+{{#if is_organizing}}
+  <ul id="task_list">
+    {{#each tasks}}
+
+{{#if waiting}}
+{{else}}
+      <li class="task_item alert">
+        <button type="button" class="close" id="{{_id}}">x</button>
+
+       <p>{{description}}</p>
+      </li>
+
+{{/if}}
+    {{/each}}
+    {{#if list_selected}}
+      <li class="alert-success" id="btnAddItem">+
+      </li>
+    {{/if}}
+  </ul>
+{{/if}}
+</template>
+
 
 <template name="sync">
   <div id="sync-inner">
