--- a/client/organize.html
+++ b/client/organize.html
@@ -59,7 +59,7 @@
   <div id="project-filter" class="project-list">
     <div class="label">Show:</div>
     {{#each projects}}
-      <div class="project {{selected}}">
+      <div class="project btn btn-inverse {{selected}}">
         {{project_text}} <span class="count">({{count}})</span>
       </div>
     {{/each}}
