--- a/client/processing.html
+++ b/client/processing.html
@@ -16,7 +16,7 @@
       <div class="btn btn-primary somedaymaybe">Someday/Maybe</div>
       <hr />
       <div class="btn btn-primary project">Project</div>
-      <h2>Is it part of a project or multi-step?</h2>
+      <h6>Is it part of a project or multi-step?</h6>
 {{#if has_project}}
 
 <form class="form-inline" role="form">
@@ -41,6 +41,26 @@
       <hr />
       <div class="btn btn-primary context">Context</div>
       <div class="btn btn-primary duedate">Due date</div>
+      <h6>Is it due on a specific date and can't be rescheduled?</h6>
+{{#if has_duedate}}
+
+<form class="form-inline" role="form">
+    <div class="form-group">
+      <input class="form-control duedate span5" type="text" id="duedate" placeholder="{{due}}">
+    </div>
+</form>
+
+{{else}}
+
+<form class="form-inline" role="form">
+    <div class="form-group">
+      <input class="form-control duedate span5" type="text" id="duedate">
+    </div>
+</form>
+
+{{/if}}
+
+
       <div class="btn btn-primary wait">Wait (amt of time)</div>
 
 
