--- a/client/meteor-taskwarrior.html
+++ b/client/meteor-taskwarrior.html
@@ -5,7 +5,7 @@
 <body>
     <div id="lendlib">
     <div id="loginButtons">
-      {{loginButtons align="right"}}
+      {{loginButtons align="left"}}
     </div>
     <div id="categories-container">
       {{> categories}}
