organizing process folder

--- a/client/main.html
+++ b/client/main.html
@@ -11,7 +11,7 @@
       {{> categories}}
     </div>
     <div id="list">
-      {{> list}}
+      {{> process}}
       {{> organize}}
       {{> do}}
     </div>
