--- a/client/organize/organize.html
+++ b/client/organize/organize.html
@@ -1,18 +1,17 @@
 <template name="organize">
 {{#if is_organizing}}
-  <div id="top-project-filter">
-    {{> project_filter}}
-  </div>
-{{> processingdialog}}
+  {{> project_filter}}
+  {{> processingdialog}}
   <ul id="task_list">
     {{#each tasks}}
 
 {{#if waiting}}
 {{else}}
+{{> todo_item}}
       <li class="task_item alert bluechangeme">
         <button type="button" class="close startprocessing-button" id="{{_id}}">x</button>
 
-       <p>{{description}}</p>
+<div class="todo-item">       <p>{{description}}</p>  </div>
       </li>
 
 {{/if}}
