creating kickstarter tasks

--- a/client/organize/organize.html
+++ b/client/organize/organize.html
@@ -7,7 +7,7 @@
     {{#each tasks}}
       {{#if waiting}}
       {{else}}
-        {{> todo_item}}
+        {{> task_todo_item}}
         <li class="task_item alert bluechangeme">
           <button type="button" class="close startprocessing-button" id="{{_id}}">x</button>
 
