color coding kickstarter tasks and changed some session defaults to make tabs stay open under hot code push

--- a/client/organize/task-todo-item/task-todo-item.html
+++ b/client/organize/task-todo-item/task-todo-item.html
@@ -1,6 +1,6 @@
 <template name="task_todo_item">
       <li class="task_item alert bluechangeme">
-<div class="btn btn-inverse" id="kickstart">make this my kickstart task</div>
+<div class="btn" id="kickstart">kickstart</div>
         <button type="button" class="close startprocessing-buttonw" id="{{_id}}">x</button>
 
     {{#if editing}}
