--- a/client/organize/task2-todo-item/task2-todo-item.html
+++ b/client/organize/task2-todo-item/task2-todo-item.html
@@ -1,6 +1,8 @@
 <template name="task2_todo_item">
       <li class="task_item alert">
+{{#if nokickstart}}
 <div class="btn btn-inverse" id="kickstart">kickstart</div>
+{{/if}}
         <button type="button" class="close startprocessing-button" id="{{_id}}">x</button>
 
     {{#if editing}}
