--- a/client/organize/task2-todo-item/task2-todo-item.html
+++ b/client/organize/task2-todo-item/task2-todo-item.html
@@ -3,6 +3,8 @@
 {{#if nokickstart}}
 <div class="btn btn-inverse" id="kickstart">kickstart</div>
 {{/if}}
+        <button type="button" class="close deps-button" id="{{_id}}">D</button>
+
         <button type="button" class="close startprocessing-button" id="{{_id}}">x</button>
 
     {{#if editing}}
