various changes. not sure why the styling on the active kickstart button broke but decided i should commit about now

--- a/client/do/do.html
+++ b/client/do/do.html
@@ -6,7 +6,7 @@
 
 {{#if waiting}}
 {{else}}
-      <li class="task_item alert bluechangeme">
+      <li class="task_item alert">
         <button type="button" class="close startprocessing-button" id="{{_id}}">x</button>
 
        <p>{{description}}</p><p id="doing-project">{{project}}</p>
