fixing kickstart button and refactoring project_filters code

--- a/client/organize/task-todo-item/task-todo-item.html
+++ b/client/organize/task-todo-item/task-todo-item.html
@@ -1,6 +1,6 @@
 <template name="task_todo_item">
       <li class="task_item alert">
-<div class="btn-inverse active btn-danger kickstart">kickstart</div>
+<div class="btn btn-inverse active btn-danger kickstart">kickstart</div>
         <button type="button" class="close dep-button" id="{{_id}}">D</button>
         <button type="button" class="close startprocessing-button" id="{{_id}}">x</button>
 
