--- a/client/organize/task2-todo-item/task2-todo-item.html
+++ b/client/organize/task2-todo-item/task2-todo-item.html
@@ -1,7 +1,7 @@
 <template name="task2_todo_item">
       <li class="task_item alert">
 {{#if nokickstart}}
-<div class="btn btn-inverse kickstart">kickstart</div>
+<div class="btn btn-inverse kickstart choosekickstart">kickstart</div>
 {{/if}}
         <button type="button" class="close deps-button" id="{{_id}}">D</button>
 
