adding login buttons

--- a/client/main.html
+++ b/client/main.html
@@ -5,6 +5,7 @@
 <body>
     <div id="lendlib">
     <div id="loginButtons">
+      {{> loginButtons align="left"}}
     </div>
     <div id="categories-container">
     </div>
