manual merge of upgrade branch 0.8.1.2

--- a/client/main.html
+++ b/client/main.html
@@ -8,8 +8,13 @@
       {{> loginButtons align="left"}}
     </div>
     <div id="categories-container">
+      {{> categories}}
     </div>
     <div id="list">
+      {{> process}}
+      {{> organize}}
+      {{> review}}
+      {{> do}}
     </div>
     <div id="sync">
     </div>
