make it so when you hover over projects on the Do tab the larger outcome appears

--- a/client/do/do.html
+++ b/client/do/do.html
@@ -22,7 +22,7 @@
       <li class="task_item alert">
         <button type="button" class="close startprocessing-button" id="{{_id}}">x</button>
 
-       <p>{{description}}</p><p id="doing-project">{{project}}</p>
+       <p>{{description}}</p><p title="{{largeroutcome}}" id="doing-project">{{project}}</p>
       </li>
 
 {{/if}}
