--- a/client/process/processingdialog/processingdialog.html
+++ b/client/process/processingdialog/processingdialog.html
@@ -89,6 +89,7 @@
     </div>
 
     <div class="modal-footer">
+      <span style="font-size:1.9em; color: orange; float: left;">{{taskcounter}}</span>
       <a href="#" class="btn cancel">Cancel</a>
       <a href="#" class="btn btn-primary save">Add party</a>
     </div>
