--- a/client/process/processingdialog/processingdialog.html
+++ b/client/process/processingdialog/processingdialog.html
@@ -89,7 +89,7 @@
     </div>
 
     <div class="modal-footer">
-      <span style="font-size:1.9em; color: orange; float: left;">{{taskcounter}}</span>
+      <span style="font-size:1.9em; color: orange; float: left;">{{taskcounter}}</span><span style="float: left; margin-left:5px;"> in the Organize tab</span>
       <a href="#" class="btn cancel">Cancel</a>
       <a href="#" class="btn btn-primary save">Add party</a>
     </div>
