--- a/client/review/project-item/project-item.html
+++ b/client/review/project-item/project-item.html
@@ -3,19 +3,20 @@
       <li class="task_item alert">
         <button type="button" class="close startprocessing-button" id="{{_id}}">x</button>
 
-<div class="project-item">       <p>{{project}}</p>
+<div class="project-item">      
     {{#if editing}}
       <div class="edit">
         <input style="width:70%" id="project-input" type="text" value="{{#if project_has_largeroutcome}}{{project_has_largeroutcome}}{{else}}{{/if}}" />
       </div>
 {{else}}
 {{#if project_has_largeroutcome}}
-  {{project_has_largeroutcome}}
+ <p> {{project_has_largeroutcome}}</p>
 {{else}}
-What is the larger outcome of this project?
+<span style="color: blue;"><p>What is the larger outcome of this project? </p></span>
 {{/if}}
 
 {{/if}}
+ <div class="btn btn-inverse btn-danger reviewproject">{{project}}</div>
 </div>
     {{#if process}}
       <button type="button" style="float:right;" class="processing-button">process</button>
