--- a/client/review/review.html
+++ b/client/review/review.html
@@ -10,6 +10,16 @@
         {{/if}}
       {{/each}}
     </ul>
+<hr/>
+<h3>Someday/Maybe</h3>
+   <ul id="task_list">
+      {{#each tasks2}}
+        {{#if waiting}}
+        {{else}}
+          {{> project_item2}}
+        {{/if}}
+      {{/each}}
+    </ul>
 
   {{/if}}
 </template>
