some basic context viewing functionality for the Do tab

--- a/client/do/do.html
+++ b/client/do/do.html
@@ -1,5 +1,10 @@
 <template name="do">
 {{#if is_doing}}
+<ul>
+{{#each contexts}}
+<li>{{context}} ({{count}})</li>
+{{/each}}
+</ul>
 {{> processingdialog}}
   <ul id="task_list">
     {{#each tasks}}
