basics of calendar display

--- a/client/do/do.html
+++ b/client/do/do.html
@@ -10,6 +10,12 @@
         <button type="button" class="close startprocessing-button" id="{{_id}}">x</button>
 
        <p>{{description}}</p>
+
+{{#if duedate}}
+<p>{{duedate}}</p>
+{{/if}}
+
+
       </li>
 
 {{/if}}
