basics of project folders and checklists

--- a/client/review/project-item/project-item.html
+++ b/client/review/project-item/project-item.html
@@ -21,6 +21,11 @@
     {{#if process}}
       <button type="button" style="float:right;" class="processing-button">process</button>
     {{/if}}
+
+{{#if projopen}}
+<p>projopen</p>
+{{/if}}
+
       </li>
 {{/if}}
 </template>
