beginning of adding contexts to new tasks from the project tab

--- a/client/organize/organize.html
+++ b/client/organize/organize.html
@@ -19,5 +19,10 @@
     {{/each}}
   </ul>
 
+    <div class="newtask-org">
+      <input type="text" id="add-newtask-org" value="" />
+      <input type="text" id="add-newtask-context-org" value="" />
+    </div>
+
 {{/if}}
 </template>
