--- a/client/review/review.html
+++ b/client/review/review.html
@@ -1,6 +1,7 @@
 <template name="review">
   {{#if is_reviewing}}
     {{> processingdialog}}
+    {{> documenteditingdialog}}
     {{> reviewdialog1}}
 
     <ul id="task_list">
