prettying up the timers with proper units and a css change

--- a/client/do/do.html
+++ b/client/do/do.html
@@ -21,7 +21,7 @@
 {{/if}}
 
 {{#if duedate}}
-<p>{{duedate}}</p><p>{{dueclock}}</p>
+<p style="">{{duedate}}</p><p style="float: right; position: relative; top: -25px;">{{dueclock}}</p>
 {{/if}}
       </li>
 
