--- a/client/review/review.html
+++ b/client/review/review.html
@@ -2,6 +2,7 @@
   {{#if is_reviewing}}
     {{> processingdialog}}
     {{> documenteditingdialog}}
+    {{> checklisteditingdialog}}
     {{> reviewdialog1}}
 
     <ul id="task_list">
