accidentally switched checklists and documents

--- a/client/review/documenteditingdialog/documenteditingdialog.html
+++ b/client/review/documenteditingdialog/documenteditingdialog.html
@@ -4,7 +4,7 @@
  <div class="mask"> </div>
   <div class="modal">
     <div class="modal-header">
-      <button type="button" class="checklisteditclose cancel">&times;</button>
+      <button type="button" class="doceditclose cancel">&times;</button>
       <h3>{{doctitle}}</h3>
     </div>
 
