--- a/client/review/checklisteditingdialog/checklisteditingdialog.html
+++ b/client/review/checklisteditingdialog/checklisteditingdialog.html
@@ -15,7 +15,7 @@
       <input type="text" id="add-newtask-context-checklist" value="" />
     </div>
 
-  <ul id="task_list">
+  <ul id="task_list" class="checklist">
     {{#each tasks}}
       {{#if waiting}}
       {{else}}
