--- a/client/review/review.html
+++ b/client/review/review.html
@@ -5,7 +5,7 @@
     {{> checklisteditingdialog}}
     {{> reviewdialog1}}
 
-    <ul id="task_list">
+    <ul id="task_list" class="main-review">
       {{#each tasks}}
         {{#if waiting}}
         {{else}}
@@ -15,7 +15,7 @@
     </ul>
 <hr/>
 <h3>Someday/Maybe</h3>
-   <ul id="task_list">
+   <ul id="task_list" class="main-review">
       {{#each tasks2}}
         {{#if waiting}}
         {{else}}
