--- a/client/review/checklisteditingdialog/checklisteditingdialog.html
+++ b/client/review/checklisteditingdialog/checklisteditingdialog.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="modal-body">
-
+<input type="checkbox" class="overallchecklistcheckbox" checked>
   <ul id="task_list" class="checklist">
     {{#each tasks}}
       {{#if waiting}}
