stub alarm sets

--- a/client/review/review.html
+++ b/client/review/review.html
@@ -3,6 +3,7 @@
     {{> processingdialog}}
     {{> documenteditingdialog}}
     {{> checklisteditingdialog}}
+    {{> alarmseteditingdialog}}
     {{> reviewdialog1}}
 
     <ul id="task_list" class="main-review">
