--- a/client/review/project-item/project-item.html
+++ b/client/review/project-item/project-item.html
@@ -30,6 +30,9 @@
 {{#each checklists}}
 <li>{{description}} (checklist)</li>
 {{/each}}
+{{#each alarmsets}}
+<li>{{description}} (alarm set)</li>
+{{/each}}
 </ul>
  {{#if new_document}}
     <div class="newdocument">
@@ -45,6 +48,14 @@
   {{else}}
   <div class="newchecklist btn btn-inverse" id="btnNewChecklist">+ Checklist</div>
   {{/if}}
+ {{#if new_alarmset}}
+    <div class="newtask">
+      <input type="text" id="add-newalarmset" value="" />
+    </div>
+  {{else}}
+  <div class="newalarmset btn btn-inverse" id="btnNewAlarmset">+ Alarm Set</div>
+  {{/if}}
+
 
 {{/if}}
 
