basic alarm sets

--- a/client/review/alarmseteditingdialog/alarmseteditingdialog.html
+++ b/client/review/alarmseteditingdialog/alarmseteditingdialog.html
@@ -1,6 +1,6 @@
 <template name="alarmseteditingdialog">
 {{#if alarmseteditingdialog}}
-  {{> processingdialog}}
+  {{> alarmprocessingdialog}}
 <div class="processingdialog">
  <div class="mask"> </div>
   <div class="modal">
