multi-item alarms mostly working

--- a/client/review/alarmseteditingdialog/alarmprocessingdialog/alarmprocessingdialog.html
+++ b/client/review/alarmseteditingdialog/alarmprocessingdialog/alarmprocessingdialog.html
@@ -46,6 +46,8 @@
       <div class="btn btn-primary defer">Defer</div>
       <hr />
 
+{{> checklistselection}}
+
     </div>
 
     <div class="modal-footer">
