--- a/client/review/checklisteditingdialog/task-checklist-item2/task-checklist-item2.html
+++ b/client/review/checklisteditingdialog/task-checklist-item2/task-checklist-item2.html
@@ -1,7 +1,7 @@
-<template name="task_checklist_item">
-      <li class="task_item alert">
+<template name="task_checklist_item2">
+      <li class="task_item thing2 alert">
         <button type="button" class="close startprocessing-button" id="{{_id}}">x</button>
-<input type="checkbox" class="checklistcheckbox">
+<input type="checkbox" class="checklistcheckbox" checked>
 
     {{#if editing}}
       <div class="edit">
