making an alarmset wide field for timer for all alarmset items

--- a/client/review/alarmseteditingdialog/alarmseteditingdialog.html
+++ b/client/review/alarmseteditingdialog/alarmseteditingdialog.html
@@ -12,6 +12,8 @@
       <input type="text" id="add-newtask-time-alarmset" value="" />
     </div>
 
+      <input type="text" id="timer-alarmset" value="{{timer}}" />
+
     </div>
 
     <div class="modal-body">
