adding some review dialog panels

--- a/client/review/review.html
+++ b/client/review/review.html
@@ -6,6 +6,10 @@
     {{> checklisteditingdialog}}
     {{> alarmseteditingdialog}}
     {{> reviewdialog1}}
+    {{> reviewdialog2}}
+    {{> reviewdialog3}}
+    {{> reviewdialog4}}
+    {{> reviewdialog5}}
 
     <ul id="task_list" class="main-review">
       {{#each tasks}}
