--- a/client/review/reviewdialog1/reviewdialog1.html
+++ b/client/review/reviewdialog1/reviewdialog1.html
@@ -5,7 +5,9 @@
   <div class="modal">
     <div class="modal-header">
       <button type="button" class="close cancel">&times;</button>
+      <h2>Choose a time</h2>
       <h3>Is your home or workplace a mess and distracting you? Dig in and let everyone know you're going to be busy for the next hour or so!</h3>
+<div id="review1ok1">Ok</div> <div id="review1end">Abort</div>
     </div>
 
     <div class="modal-body">
