added a bunch of weekly review panels

--- a/client/review/review.html
+++ b/client/review/review.html
@@ -10,6 +10,13 @@
     {{> reviewdialog3}}
     {{> reviewdialog4}}
     {{> reviewdialog5}}
+    {{> reviewdialog6}}
+    {{> reviewdialog7}}
+    {{> reviewdialog8}}
+    {{> reviewdialog9}}
+    {{> reviewdialog10}}
+    {{> reviewdialog11}}
+    {{> reviewdialog12}}
 
     <ul id="task_list" class="main-review">
       {{#each tasks}}
