--- a/client/review/reviewdialog10/reviewdialog10.html
+++ b/client/review/reviewdialog10/reviewdialog10.html
@@ -1,13 +1,13 @@
-<template name="reviewdialog5">
-{{#if reviewdialog5}}
+<template name="reviewdialog10">
+{{#if reviewdialog10}}
 <div class="processingdialog">
  <div class="mask"> </div>
   <div class="modal">
     <div class="modal-header">
       <button type="button" class="close cancel">&times;</button>
-      <h2>Get Current</h2>
-      <h3>Past Events</h3>
-<div id="review5ok1">Ok</div> <div id="review5end">Abort</div>
+      <h2>Get Creative</h2>
+      <h3>Someday/Maybe</h3>
+<div id="review10ok1">Ok</div> <div id="review10end">Abort</div>
     </div>
 
     <div class="modal-body">
