--- a/client/review/reviewdialog13/reviewdialog5.html
+++ b/client/review/reviewdialog13/reviewdialog5.html
@@ -1,4 +1,4 @@
-<template name="reviewdialog5">
+<template name="reviewdialog13">
 {{#if reviewdialog5}}
 <div class="processingdialog">
  <div class="mask"> </div>
@@ -6,7 +6,7 @@
     <div class="modal-header">
       <button type="button" class="close cancel">&times;</button>
       <h2>Get Current</h2>
-      <h3>Past Events</h3>
+      <h3>Past Events - Next Events - Next Actions - Waiting For - Projects - Someday/Maybe - Ideas - Finishing</h3>
 <div id="review5ok1">Ok</div> <div id="review5end">Abort</div>
     </div>
 
