--- a/client/review/reviewdialog8/reviewdialog8.html
+++ b/client/review/reviewdialog8/reviewdialog8.html
@@ -1,13 +1,13 @@
-<template name="reviewdialog5">
-{{#if reviewdialog5}}
+<template name="reviewdialog8">
+{{#if reviewdialog8}}
 <div class="processingdialog">
  <div class="mask"> </div>
   <div class="modal">
     <div class="modal-header">
       <button type="button" class="close cancel">&times;</button>
       <h2>Get Current</h2>
-      <h3>Past Events</h3>
-<div id="review5ok1">Ok</div> <div id="review5end">Abort</div>
+      <h3>Waiting For</h3>
+<div id="review8ok1">Ok</div> <div id="review8end">Abort</div>
     </div>
 
     <div class="modal-body">
