little additions to the weekly review

--- a/client/review/reviewdialog4/reviewdialog4.html
+++ b/client/review/reviewdialog4/reviewdialog4.html
@@ -7,6 +7,10 @@
       <button type="button" class="close cancel">&times;</button>
       <h2>Get Clear</h2>
       <h3>Empty your head [need a head clearing trigger list]</h3>
+<ul>
+<li><a href="http://wiki.43folders.com/index.php/Trigger_List">43 Folders trigger list</a></li>
+<li><a href="http://www.minezone.org/wiki/MVance/GettingThingsDone">GTD Notes</a></li>
+</ul>
 <div id="review4ok1">Ok</div> <div id="review4end">Abort</div>
     </div>
 
