--- a/client/review/reviewdialog3/reviewdialog3.html
+++ b/client/review/reviewdialog3/reviewdialog3.html
@@ -7,6 +7,11 @@
       <button type="button" class="close cancel">&times;</button>
       <h2>Get Clear</h2>
       <h3>Process all you have in your inbox(es). [Need to get a list of all inboxes and a way to add new ones on here]</h3>
+<ul>
+<li>Physical inbox</li>
+<li>Voice mail</li>
+<li>E-mail</li>
+</ul>
 <div id="review3ok1">Ok</div> <div id="review3end">Abort</div>
     </div>
 
