basic past and upcoming calendar items

--- a/client/review/reviewdialog6/reviewdialog6.html
+++ b/client/review/reviewdialog6/reviewdialog6.html
@@ -7,6 +7,9 @@
       <button type="button" class="close cancel">&times;</button>
       <h2>Get Current</h2>
       <h3>Next Events</h3>
+{{#each upcomingcalendar}}
+<div class="todo-item">       <p>{{description}}</p>  </div>
+{{/each}}
 <div id="review6ok1">Ok</div> <div id="review6end">Abort</div>
     </div>
 
