--- a/client/review/reviewdialog5/reviewdialog5.html
+++ b/client/review/reviewdialog5/reviewdialog5.html
@@ -7,6 +7,9 @@
       <button type="button" class="close cancel">&times;</button>
       <h2>Get Current</h2>
       <h3>Past Events</h3>
+{{#each pastcalendar}}
+<div class="todo-item">       <p>{{description}}</p>  </div>
+{{/each}}
 <div id="review5ok1">Ok</div> <div id="review5end">Abort</div>
     </div>
 
