changed language about projects on processing dialog

--- a/client/process/processingdialog/processingdialog.html
+++ b/client/process/processingdialog/processingdialog.html
@@ -15,7 +15,7 @@
       <div class="btn btn-primary archive">Archive</div>
       <div class="btn btn-primary somedaymaybe">Someday/Maybe</div>
       <hr />
-      <h6>Is it part of a project or multi-step?</h6>
+      <h6>Name of project (no spaces) if part of a project or multi-step</h6>
 {{#if has_project}}
 
 <form class="form-inline" role="form">
