made contextpicker buttons bigger

--- a/client/do/do.html
+++ b/client/do/do.html
@@ -52,7 +52,7 @@
 
 <ul id="contextpicker">
 {{#each contexts}}
-{{#if context}}<li><input type="checkbox" {{checkedcontext}}> {{context}} ({{count}})</li>{{/if}}
+{{#if context}}<li><div class="btn btn-inverse">{{checkedcontext}}</div> {{context}} ({{count}})</li>{{/if}}
 {{/each}}
 </ul>
 {{/if}}
