--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,6 @@
 <head>
   <title>meteor-taskwarrior</title>
+  <meta name="viewport" content="user-scalable=no, initial-scale=1, minimal-ui, maximum-scale=1, minimum-scale=1">
 </head>
 
 <body>
