clicking task items on the Review tab no longer moves the whole project to Somedaymaybe

--- a/client/review/project-item/project-item.html
+++ b/client/review/project-item/project-item.html
@@ -1,7 +1,7 @@
 <template name="project_item">
 {{#if project}}
       <li class="task_item alert">
-        <button type="button" class="close startprocessing-button" id="{{_id}}">x</button>
+        <button type="button" class="projclose close startprocessing-button" id="{{_id}}">x</button>
 
 <div class="project-item">      
     {{#if editing}}
